# marlin_v100

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  benchmark.sh  build.sh  install-vllm-0.19.1.sh  pytest.ini  setup.py  test.sh  upstream_map.yaml
benchmarks/: analyze_marlin_auto_strategy.py  benchmark_marlin_dense.py  benchmark_marlin_model_shapes_env.py  benchmark_marlin_moe.py  benchmark_shapes.py  benchmark_sm70_matmul_probe.py  common.py  generate_selectors.py  marlin_gemm_shapes.py  sweep_sm70_pure_gemm.py  verify_selector_hit_rate.py
cmake/: utils.cmake
csrc/: launch_bounds_utils.h  torch_bindings_marlin.cpp  type_convert.cuh
csrc/moe/: grouped_topk_kernels.cu  topk_softmax_kernels.cu  torch_bindings_marlin.cpp
csrc/moe/marlin_moe_wna16/: generate_kernels.py  marlin_template.h  ops.cu  sm70_marlin_fp8_gemm.cu  sm70_marlin_gemm.cuh  sm70_marlin_mxfp4_gemm.cu  sm70_marlin_nvfp4_gemm.cu  sm70_marlin_u4_gemm.cu  sm70_marlin_u4b8_gemm.cu  sm70_marlin_u8_gemm.cu  sm70_marlin_u8b128_gemm.cu
csrc/quantization/marlin/: awq_marlin_repack.cu  dequant.h  generate_kernels.py  gptq_marlin_repack.cu  marlin.cu  marlin.cuh  marlin_dtypes.cuh  marlin_mma.h  marlin_template.h  sm70_cutlass.h  sm70_cutlass_matmul_probe.cu  sm70_dense_common.cuh  sm70_dense_gemm.cuh  sm70_dense_iterator_utils.cuh  sm70_dense_splitk.cuh  sm70_marlin_bias.cu  sm70_marlin_bias.cuh  sm70_marlin_common.cuh  sm70_marlin_fp8_gemm.cu  sm70_marlin_gemm.cuh  sm70_marlin_iterator_utils.cuh  sm70_marlin_mma.cuh  sm70_marlin_mxfp4_gemm.cu  sm70_marlin_nvfp4_gemm.cu  sm70_marlin_splitk.cuh  sm70_marlin_u4_gemm.cu  sm70_marlin_u4b8_gemm.cu  sm70_marlin_u8_gemm.cu  sm70_marlin_u8b128_gemm.cu
docs/: 20260511_001_restore_validation_harness.md  20260511_002_cutlass_build_baseline.md  20260511_003_cutlass3_cute_matmul_probe.md  20260511_004_pure_b_smem_mma_probe.md  20260511_005_sm70_u4b8_dequant_to_smem.md  20260511_006_sm70_u4_zp_plan.md  20260511_007_sm70_u4_zp_prototype.md  20260511_008_sm70_u4_zp_iterator_optimization.md  20260512_009_sm70_u4_full_tile_staticization.md  20260512_010_sm70_u4b8_group_size_paths.md  20260512_011_sm70_u4_vs_u4b8_group_minus1.md  20260512_011_sm70_u4b8_full_tile_staticization.md  20260512_012_sm70_sass_optimization_analysis.md  20260512_013_sm70_u4b8_unified_wide_path.md  20260512_014_sm70_int4_qweight_iterator_restructure.md  20260513_016_sm70_u4_u4b8_iterator_alignment.md  20260513_017_sm70_int4_group_cache_policy_alignment.md  20260513_018_sm70_u4_paired_metadata_cache.md  20260514_018_marlin_inference_mnk_boundary.md  20260514_019_sm70_pure_gemm_sweep.md  20260514_021_sm70_u4_scale_bias_metadata.md  20260514_022_sm70_u4_256n_8warp_alignment.md  20260514_023_sm70_u8_zp_bias_dense.md  20260514_024_sm70_u8b128_dense.md  20260516_025_sm70_dense_geometry_templates.md  20260518_026_sm70_fp8_dense_benchmark.md  20260518_027_sm70_nvfp4_dense.md  20260518_028_sm70_nvfp4_dense_benchmark.md  20260518_029_sm70_mxfp4_dense_benchmark.md  20260520_033_sm70_dense_tilemode_regression_fix.md  20260521_035_sm70_nvfp4_fp8_scales.md  20260521_036_sm70_nvfp4_scale_dequant_optimization.md  20260521_037_sm70_mxfp4_e8m0_scales.md  20260526_038_sm70_u4b8_cta_sweep_group32.md  20260527_039_sm70_u4_splitk_atomic_benchmark.md  20260528_040_sm70_u4_splitk_vectorized_convert_benchmark.md  20260528_041_sm70_u4_splitk_groupaware_partition_benchmark.md  20260528_042_sm70_u4_splitk_reusable_ctmp_benchmark.md  20260528_044_sm70_dense_splitk_all_quant_alignment.md  20260529_047_sm70_dense_auto_ctan_fullctan_benchmark.md  (+20 more)
logs/validation/2026-04-10-sm75-9112b86-calibrated/: summary.txt
python/marlin_v100/: __init__.py  calibration.py  dense.py  moe.py  ops.py  quant_utils.py  routing.py
tests/: __init__.py  calibration.py  conftest.py  helpers.py  ops.py  sm70_env_sweep.py  sm70_warpk16_probe.cu  test_benchmark_marlin_model_shapes_env.py  test_calibration.py  test_marlin_dense.py  test_marlin_gemm_shapes.py  test_marlin_generators.py  test_marlin_helpers.py  test_marlin_linear_kernel.py  test_marlin_model_shapes_env.py  test_marlin_moe.py  test_marlin_moe_kernel.py  writeback_marlin_cases.py
vllm/: _C.py  __init__.py  _aiter_ops.py  _custom_ops.py  _moe_C.py  config.py  envs.py  logger.py  scalar_type.py
vllm/distributed/: __init__.py
vllm/model_executor/: parameter.py  utils.py
vllm/model_executor/kernels/linear/: __init__.py
vllm/model_executor/kernels/linear/mixed_precision/: __init__.py  marlin.py
vllm/model_executor/kernels/linear/scaled_mm/: marlin.py
vllm/model_executor/layers/: linear.py  vocab_parallel_embedding.py
vllm/model_executor/layers/fused_moe/: __init__.py  activation.py  config.py  cpu_fused_moe.py  fused_marlin_moe.py  layer.py  modular_kernel.py  moe_align_block_size.py  topk_weight_and_reduce.py  unquantized_fused_moe_method.py  utils.py
vllm/model_executor/layers/fused_moe/oracle/: fp8.py  mxfp4.py  nvfp4.py
vllm/model_executor/layers/quantization/: __init__.py  awq.py  awq_marlin.py  base_config.py  gptq_marlin.py  input_quant_fp8.py
vllm/model_executor/layers/quantization/compressed_tensors/: compressed_tensors_moe.py
vllm/model_executor/layers/quantization/compressed_tensors/schemes/: __init__.py  compressed_tensors_scheme.py  compressed_tensors_w4a16_mxfp4.py  compressed_tensors_w4a16_nvfp4.py  compressed_tensors_w8a16_fp8.py  compressed_tensors_wNa16.py
vllm/model_executor/layers/quantization/quark/: quark_moe.py
vllm/model_executor/layers/quantization/utils/: flashinfer_mxint4_moe.py  fp8_utils.py  gptq_utils.py  int8_utils.py  layer_utils.py  marlin_utils.py  marlin_utils_fp4.py  marlin_utils_fp8.py  mxfp4_utils.py  nvfp4_emulation_utils.py  nvfp4_utils.py  ocp_mx_utils.py  quant_utils.py  w8a8_utils.py
vllm/transformers_utils/: config.py
vllm/utils/: collection_utils.py  flashinfer.py  math_utils.py  platform_utils.py
